Fix font readability on links.

--- a/static/css/wheregoes.css
+++ b/static/css/wheregoes.css
@@ -2,7 +2,6 @@
 
 body {
   background-color: antiquewhite;
-  font-family: et-book, Palatino, palatino linotype, palatino lt std, book antiqua, Georgia, serif;
 }
 
 /* form.html */
@@ -27,6 +26,10 @@ body {
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
+}
+
+.form-container h2 {
+  font-family: et-book, Palatino, palatino linotype, palatino lt std, book antiqua, Georgia, serif;
 }
 
 .form-container input[type="text"],
@@ -132,7 +135,7 @@ li {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  /* font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
@@ -194,6 +197,7 @@ li {
   padding-top: 10px;
   padding-bottom: 15px;
   align-items: first baseline;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .header-row {
